# cuda-image-edge-detection

./: CMakeLists.txt  README.md  kernel.cu  main.cpp
